<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Tortillator</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to Tortillator!</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="new_user">New to Tortillator? Sign up</string>
    <string name="sign_up">Sign Up</string>
    <string name="repeat_pass">Repeat password</string>
    <string name="email">Email</string>
    <string name="city">City</string>
    <string name="last_votes">Your last votes</string>
    <string name="ranking">Tortillator´s ranking</string>
    <string name="geolocation">Geolocation</string>
    <string name="recommendations">Recommendations</string>
    <string name="register_form">Register form</string>
    <string name="title_activity_geolocation">Geolocation</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_ranking">Ranking</string>
    <string name="title_activity_recommendations">Recommendations</string>
    <string name="title_activity_bar">Bar</string>
    <string name="bar_average">Average</string>
    <string name="bar_your_rating">Your rating</string>
    <string name="bar_schedule">Schedule: </string>
    <string name="bar_address">Address: </string>
    <string name="bar_city">City: </string>
    <string name="bar_province">Province: </string>
    <string name="bar_comment">Write your comment</string>
    <string name="bar_button">Save</string>
    <string name="com_by">by: </string>
    <string name="price">Price:</string>
    <string name="average">Average:</string>
    <string name="give_vote">Give your vote</string>
    <string name="share">Share your rating</string>
    <string name="change_vote">Click here to change your vote</string>
    <string name="total">/10</string>
    <string name="title_activity_main_activity_fragments">User</string>
    <string name="title_activity_main">Main</string>
    <string name="search_title">Search</string>
    <string name="logout">Logout</string>
    <string name="gpsNotEnabled">GPS DISABLED</string>
    <string name="enableGPS">You have to enable your GPS so we can find you. Do you want to enable it?</string>
    <string name="lookingForText">We are looking for you and bars around</string>
    <string name="no">No</string>
    <string name="yesCarry">Yes, carry me</string>
    <string name="noRecommends">There are not recommendations for you now. Try it later.</string>
    


</resources>
